Se modifica configuracion de seguridad y cors